fix form border on small screen

--- a/styles/scss/components/_quotes-forms.scss
+++ b/styles/scss/components/_quotes-forms.scss
@@ -1,9 +1,8 @@
 .quote-container {
    @include flexBox(column, center, center, 1rem);
-   padding: 0 2rem;
    width: 100%;
 
-   @media (min-width: 768px) {
+   @media (min-width: 1201px) {
       padding: 0 4rem;
    }
 
@@ -13,22 +12,23 @@
       font-weight: $font-weight-600;
 
       @media (min-width: 768px) {
+         font-size: 3.5rem;
+      }
+
+      @media (min-width: 992px) {
          font-size: 5rem;
       }
    }
 }
 
-#quotes {
-   box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
-}
-
 form {
    @include flexBox(column, start, center, 1rem);
    width: 100%;
+   border-radius: 0.5rem;
+   padding: 2rem;
+   border: 0.1rem solid $black-pearl;
 
    @media (min-width: 992px) {
-      border-radius: 0.5rem;
-      border: 0.1rem solid $black-pearl;
       padding: 4rem;
    }
 
@@ -74,5 +74,11 @@ form {
       padding: 1.5rem;
       width: 100%;
       background: $moon-yellow;
+   }
+}
+
+@media (min-width: 768px) {
+   #quotes {
+      box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
    }
 }
