--- a/styles/scss/components/_team-card.scss
+++ b/styles/scss/components/_team-card.scss
@@ -20,6 +20,7 @@
 
       & img {
          width: 20rem;
+         height: 20rem;
          border-radius: 1rem;
       }
 
